ES6: Reusing function name as a parameter name shouldn't throw Syntax Error https://bugs.webkit.org/show_bug.cgi?id=158575

Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

The check for a parameter with a duplicate name doesn't take into account the
type of the prior variable.  Added a check that the duplicate is also a
parameter.

See the relevant spec section at:
http://www.ecma-international.org/ecma-262/6.0/#sec-function-definitions-static-semantics-early-errors

* parser/Parser.h:
(JSC::Scope::declareParameter):

LayoutTests:

Added a new test case.

* js/basic-strict-mode-expected.txt:
* js/script-tests/basic-strict-mode.js:


Canonical link: https://commits.webkit.org/176674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201892 268f45cc-cd09-0410-ab3c-d52691b4dbfc